--- a/src/app/components/ms-system-language-modal/ms-system-language-modal.component.html
+++ b/src/app/components/ms-system-language-modal/ms-system-language-modal.component.html
@@ -4,10 +4,14 @@
             <div class="modal-body text-center">
                 <div *ngFor="let option of options">
                     <div class="dropdown-divider"></div>
-                    <div class="option" (click)="changeSystemLanguage(option)">{{ option | translate: 'SYSTEM_LANGUAGE':language }}</div>
+                    <div class="option" (click)="changeSystemLanguage(option)">{{ option | translate:
+                        'SYSTEM_LANGUAGE':language }}</div>
                 </div>
                 <div class="dropdown-divider"></div>
             </div>
+        </div>
+        <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal" #closeModalBtn>Close</button>
         </div>
     </div>
 </div>
