--- a/src/app/components/about-me/ms-about-me/ms-about-me.component.html
+++ b/src/app/components/about-me/ms-about-me/ms-about-me.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="card" data-aos="zoom-in" data-aos-offset="10">
+    <div class="card">
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <div class="card-body">
