--- a/src/app/components/ms-header-body/ms-header-body.component.html
+++ b/src/app/components/ms-header-body/ms-header-body.component.html
@@ -15,11 +15,11 @@
       <div class="section pb-0">
         <div class="container">
           <div class="button-container">
-            <a class="btn btn-info btn-round" href="{{ resumeURI | translate: 'RESUME_INFO':language }}" data-aos="zoom-in"
-              data-aos-anchor="data-aos-anchor" download="{{ resumeDownloadInfo | translate: 'RESUME_INFO':language }}">Download CV</a>
+            <a class="btn btn-info btn-round" href="{{ resumeURI | translate: 'RESUME_INFO':language }}"
+              download="{{ resumeDownloadInfo | translate: 'RESUME_INFO':language }}">Download CV</a>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div> 
+</div>
