Update Uber's experience and hard skills section

--- a/src/app/components/ms-footer/ms-footer.component.html
+++ b/src/app/components/ms-footer/ms-footer.component.html
@@ -3,7 +3,7 @@
         <ms-btn-linkedin [position]="'top'" [language]="language"></ms-btn-linkedin>
     </div>
 
-    <div class="h4 title text-center mt-0">Manoela Silva</div>
+    <div class="h4 title text-center mt-0">Camila Silva</div>
     <div class="text-center text-muted">
         <p>&copy; {{currentYear}}</p>
     </div>
