--- a/src/app/components/skills/ms-hard-skills/ms-hard-skills.component.html
+++ b/src/app/components/skills/ms-hard-skills/ms-hard-skills.component.html
@@ -1,5 +1,3 @@
 <div class="row">
-    <div *ngFor="let skills of skillGroups" class="col-md-6">
-        <ms-hard-skills-item *ngFor="let skill of skills" [skill]="skill" [language]="language"></ms-hard-skills-item>
-    </div>
+    <ms-hard-skills-item *ngFor="let skill of skills" [skill]="skill" [language]="language" class="col-md-6"></ms-hard-skills-item>
 </div>
